# drf-auth

./: db.sqlite3  docker-compose.yml  pyproject.toml
drf_api/: settings.py  urls.py
posts/: models.py  tests.py  views.py
posts/migrations/: 0001_initial.py  0002_delete_post.py  0003_post.py  0004_rename_post_posts.py
